<resources>
    <string name="app_name">MaRéu</string>
    <string name="ajouter">ajouter</string>
    <string name="attendees">Participants :</string>
    <string name="checked_room">checked room</string>
    <string name="choose_ending_time">choose ending time</string>
    <string name="choose_date">choose date</string>
    <string name="choose_starting_time">choose starting time</string>
    <string name="code_de_suppression">code de suppression</string>
    <string name="color">color</string>
    <string name="date">Date</string>
    <string name="date_filter">filtre par date</string>
    <string name="delete_button">delete button</string>
    <string name="description">description</string>
    <string name="display_all">afficher tout</string>
    <string name="enregistrer">enregistrer</string>
    <string name="email">email</string>
    <string name="generate">CREER</string>
    <string name="generate_meeting">pour créer une réunion</string>
    <string name="image_subject">image subject</string>
    <string name="image_date">image date</string>
    <string name="image_time">image time</string>
    <string name="image_attendees">image attendees</string>
    <string name="image_room">image room</string>
    <string name="length">Durée: </string>
    <string name="length_1">Durée</string>
    <string name="logo_calendar">picto_calendar</string>
    <string name="logo_clock">picto_clock</string>
    <string name="logo_room">picto_room</string>
    <string name="logo_person">picto_person</string>
    <string name="name">name</string>
    <string name="not_available">Cette salle de réunion n\'est pas disponible à cet horaire</string>
    <string name="radiobutton">radiobutton</string>
    <string name="room_1">salle 1</string>
    <string name="room">Salle </string>
    <string name="room_filter">filtre par salle</string>
    <string name="room_logo">room_logo</string>
    <string name="room_x">Salle X</string>
    <string name="room_2">salle</string>
    <string name="salle_1">Salle 1</string>
    <string name="salle_2">Salle 2</string>
    <string name="salle_3">Salle 3</string>
    <string name="salle_4">Salle 4</string>
    <string name="salle_5">Salle 5</string>
    <string name="salle_6">Salle 6</string>
    <string name="salle_7">Salle 7</string>
    <string name="salle_8">Salle 8</string>
    <string name="salle_9">Salle 9</string>
    <string name="salle_10">Salle 10</string>
    <string name="selected_attendees">selected attendees</string>
    <string name="starting_time">starting Time</string>
    <string name="subject">Subject</string>
    <string name="subject_1">Sujet: </string>
    <string name="time">Time</string>
    <string name="validate">Valider</string>
</resources>