<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:id="@+id/color"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:contentDescription="@string/color"
        android:src="@drawable/ic_baseline_lens_24"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <ImageView
        android:id="@+id/image_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_subject"
        android:src="@drawable/ic_baseline_subject_24"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/editText_subject"
        app:layout_constraintBottom_toBottomOf="@id/editText_subject" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText_subject"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_date"
        app:layout_constraintStart_toEndOf="@id/image_subject">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInput_subject"
            android:hint="@string/subject"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        app:layout_constraintTop_toTopOf="@id/image_date"
        app:layout_constraintBottom_toTopOf="@id/date_big"
        app:layout_constraintStart_toEndOf="@id/image_date" />

    <ImageView
        android:id="@+id/image_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_date"
        android:src="@drawable/ic_time_24"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/image_time"
        app:layout_constraintTop_toBottomOf="@id/image_subject" />

    <TextView
        android:id="@+id/date_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintBottom_toBottomOf="@id/image_date"
        app:layout_constraintStart_toStartOf="@id/date"/>

    <ImageView
        android:id="@+id/image_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_time"
        android:src="@drawable/ic_length_24"
        app:layout_constraintTop_toBottomOf="@id/image_date"
        app:layout_constraintBottom_toTopOf="@id/image_room"
        app:layout_constraintStart_toStartOf="@id/guideline2" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/image_time"
        app:layout_constraintBottom_toTopOf="@id/time_big"
        app:layout_constraintStart_toEndOf="@id/image_time" />

    <TextView
        android:id="@+id/time_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="@id/time"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintBottom_toBottomOf="@id/image_time" />

    <ImageView
        android:id="@+id/image_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_room"
        android:src="@drawable/ic_room_24"
        app:layout_constraintTop_toBottomOf="@id/image_time"
        app:layout_constraintBottom_toTopOf="@id/image_attendees"
        app:layout_constraintStart_toStartOf="@id/guideline2" />

    <TextView
        android:id="@+id/text_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_2"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/image_room"
        app:layout_constraintTop_toTopOf="@id/image_room"
        app:layout_constraintBottom_toTopOf="@id/checked_room" />

    <TextView
        android:id="@+id/checked_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checked_room"
        app:layout_constraintStart_toStartOf="@id/text_room"
        app:layout_constraintTop_toBottomOf="@id/text_room"
        app:layout_constraintBottom_toBottomOf="@id/image_room" />

    <ImageView
        android:id="@+id/image_attendees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_attendees"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toBottomOf="@id/image_room"
        app:layout_constraintBottom_toTopOf="@id/button_create"
        app:layout_constraintStart_toStartOf="@id/guideline2" />


    <TextView
        android:id="@+id/text_attendees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendees"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/image_attendees"
        app:layout_constraintTop_toTopOf="@id/image_attendees"
        app:layout_constraintBottom_toTopOf="@id/attendees" />

    <TextView
        android:id="@+id/attendees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_attendees"
        app:layout_constraintStart_toStartOf="@id/text_attendees"
        app:layout_constraintTop_toBottomOf="@id/text_attendees"
        app:layout_constraintBottom_toBottomOf="@id/image_attendees" />


    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_create"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline1"/>

    <Button
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>