<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/list_room_check"
        android:name="com.ariexiet.mareu.ui.new_meeting.RoomCheckListFragment"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".ui.new_meeting.RoomCheckListFragment"
        tools:listitem="@layout/fragment_rooms_check"/>

    <Button
        android:id="@+id/room_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_weight="1"
        android:text="@string/validate" />

</LinearLayout>